Added bootstrap cdn

--- a/books.html
+++ b/books.html
@@ -7,21 +7,24 @@
     <meta charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HTML Project - Works of Jonathan</title>
+    <link type="text/css" rel="stylesheet" href="SharedStyle.css">
     <link type="text/css" rel="stylesheet" href="custom.css">
 </head>
 <body>
 
 <!-- Main container -->
-<div style="background-color: aliceblue; width: 700px;
-margin: 0 auto; padding: 5px;">
+<div class="container" style="border: 1px solid red">
+    <header>
+        <nav>
+            <ul>
+                <li> <a href="index.html"> Home </a> </li>
+                <li> <a href="books.html"> Books </a> </li>
+                <li> <a href="contact.html"> Contact </a> </li>
+            </ul>
+        </nav>
+    </header>
 
-    <!-- MENU container -->
-    <div id="menu">
-        <a href="index.html">Home</a>
-        <a href="books.html">Books</a>
-        <a href="contact.html">Contact</a>
-    </div><!-- END MENU container -->
-
+    
     <h1 class="center normalText">Works of Jonathan Edwards </h1>
 
     <p>
