--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
     <meta charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HTML Project - Contact Details</title>
+    <link type="text/css" rel="stylesheet" href="SharedStyle.css">
     <link type="text/css" rel="stylesheet" href="custom.css">
 </head>
 <body>
@@ -16,11 +17,15 @@
 margin: 0 auto; padding: 5px;">
 
     <!-- MENU container -->
-    <div id="menu">
-        <a href="index.html">Home</a>
-        <a href="books.html">Books</a>
-        <a href="contact.html">Contact</a>
-    </div><!-- END MENU container -->
+    <<header>
+        <nav>
+            <ul>
+                <li> <a href="index.html"> Home </a> </li>
+                <li> <a href="books.html"> Books </a> </li>
+                <li> <a href="contact.html"> Contact </a> </li>
+            </ul>
+        </nav>
+    </header>
 
     <h1 class="center normalText">Contact Details </h1>
 
