--- a/index.html
+++ b/index.html
@@ -8,87 +8,84 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HTML Project - Homepage</title>
 
-    <link type="text/css" rel="stylesheet" href="SharedStyle.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link type="text/css" rel="stylesheet" href="custom.css">
 </head>
 <body>
+  <!-- Main container -->
+  <div class="container" style="border: 1px solid red">
+      <header>
+          <nav>
+              <ul>
+                  <li> <a href="index.html"> Home </a> </li>
+                  <li> <a href="books.html"> Books </a> </li>
+                  <li> <a href="contact.html"> Contact </a> </li>
+              </ul>
+          </nav>
+      </header>
 
-<!-- Main container -->
-<div class="container" style="border: 1px solid red">
-    <header>
-        <nav>
-            <ul>
-                <li> <a href="index.html"> Home </a> </li>
-                <li> <a href="books.html"> Books </a> </li>
-                <li> <a href="contact.html"> Contact </a> </li>
-            </ul>
-        </nav>
-    </header>
+      <!-- Section 1 -->
+      <section class="hero">
+          <div class="row">
+          <main>
+              <div class="col-lg-9 col-md-12"></div>
+              <img src="images/free_boats.jpg" alt="Jonathan Edwards">
+          </main>
 
-    <!-- Section 1 -->
-    <section class="hero">
-        <div class="row">
-        <main>
-            <div class="column-lg-9 column-md-12"></div>
-                <img src="images/free_boats.jpg" alt="Jonathan Edwards">
+          <aside>
+              <div class="col-lg-3 col-md-12">
+                <h2>Jonathan Edwards <br /> American Preacher </h2>
+                <p>
+                    Jonathan David Edwards, CBE (born 10 May 1966) is a British former triple jumper. He is an Olympic, World, Commonwealth and European champion, and has held the world record in the event since 1995
+                </p>
+                <p>
+                    <strong> Born </strong> October 5th <br /> <br />
+                    <strong> Died </strong> October 6th <br /> <br />
+                    <strong> Spouse </strong> Marie <br /> <br />
+                    <strong> Children </strong> Kevin <br /> <br />
+                </p>
+              </div>
+          </aside>
+          </div>
+      </section>
 
+      <section class="content">
+          <div class="row">
+              <div class="col-lg-12 col-md-12">
+              <header>
+                  <h2>EARLY LIFE</h2>
+              </header>
 
-        </main>
+                  <main>
+                      <p>
+                          Some Text dfdsfd sdffs dfsd f sfjsdffjsfjf sfsd jdfj f jsdf jsd f
+                      </p>
+                  </main>
 
-        <aside>
-            <div class="column-lg-3 column-md-12">
-            <h2>Jonathan Edwards <br /> American Preacher </h2>
-            <p>
-                Jonathan David Edwards, CBE (born 10 May 1966) is a British former triple jumper. He is an Olympic, World, Commonwealth and European champion, and has held the world record in the event since 1995
-            </p>
-            <p>
-                <strong> Born </strong> October 5th <br /> <br />
-                <strong> Died </strong> October 6th <br /> <br />
-                <strong> Spouse </strong> Marie <br /> <br />
-                <strong> Children </strong> Kevin <br /> <br />
+                  <header>
+                      <h2>
+                         GREAT AWAKENING
+                      </h2>
+                  </header>
 
+                  <main>
+                      <p>
+                          More text dsfsfsd sfsd fsfdf sdf sdfsd sd sdfsdf sdfsdf sd f
+                      </p>
+                  </main>
+              </div>
+          </div>
+      </section>
+  </div> <!-- END Main container -->
 
+  <footer>
+      <nav>
+          Copyright &copy; 2017 Creedon
+      </nav>
+  </footer>
 
-            </p>
-            </div>
-        </aside>
-        </div>
-    </section>
-
-    <section class="content">
-        <div class="row">
-            <div class="column-lg-12 column-md-12">
-            <header>
-                <h2>EARLY LIFE</h2>
-            </header>
-
-                <main>
-                    <p>
-                        Some Text dfdsfd sdffs dfsd f sfjsdffjsfjf sfsd jdfj f jsdf jsd f
-                    </p>
-                </main>
-
-                <header>
-                    <h2>
-                       GREAT AWAKENING
-                    </h2>
-                </header>
-
-                <main>
-                    <p>
-                        More text dsfsfsd sfsd fsfdf sdf sdfsd sd sdfsdf sdfsdf sd f
-                    </p>
-                </main>
-            </div>
-        </div>
-    </section>
-</div> <!-- END Main container -->
-
-<footer>
-    <nav>
-        Copyright &copy; 2017 Creedon
-    </nav>
-</footer>
-
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </body>
 </html>
